# agent-coworker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_zh.md  pyproject.toml
docs/: index.html
docs/site/: index.html
examples/: 01_minimal.py  02_collaboration.py  03_discover_skills.py  04_remote_skill_call.py  05_collaborate.py  06_serve_with_dashboard.py  07_nanobot_adapter.py  08_openclaw_adapter.py  09_group_chat.py  README.md  fin_agent.py  icy_demo_bot.py
examples/fin_agent_docker/: Dockerfile  deploy.sh
examples/fin_knowledge/: rules.json  system_prompt.md
src/agent_coworker/: __init__.py  agent.py  cli.py  mcp_server.py
src/agent_coworker/_internal/: __init__.py  bridge.py  client.py  collab_orchestrator.py  executor.py  llm_skill.py  okr.py  peers.py  router.py  security.py  session.py  skill_importer.py  skill_manifest.py  skill_visibility.py  store.py  sub_agent.py  task_manager.py  task_queue.py  transport.py
src/agent_coworker/_internal/bridge/: package.json  xmtp_bridge.js
src/agent_coworker/_internal/frontend/: index.html
src/agent_coworker/_internal/frontend/assets/: index-BL4SOsM7.css  index-BNuPXglI.js  index-BNuPXglI.js.map  index-BkIZtSa3.js  index-BkIZtSa3.js.map  index-BwKKly2Y.css  index-C-o87pk-.js  index-C-o87pk-.js.map  index-D2UzuxsD.css  index-HGDtwlAv.css  index-bXlHoRMV.js  index-bXlHoRMV.js.map
src/agent_coworker/_internal/handlers/: __init__.py  builtin.py  context_handler.py  session_handler.py  skill_handler.py  task_handler.py  workflow_handler.py
tests/: conftest.py  test_client.py  test_collab_handler.py  test_concurrent_collab.py  test_context.py  test_coworker_collab.py  test_error_recovery.py  test_integration_collab_flow.py  test_llm_projection.py  test_multi_session.py  test_okr.py  test_privacy.py  test_reputation.py  test_router.py  test_s0_trust_enforcement.py  test_s1_skill_cards.py  test_s2_sessions.py  test_s3_metering.py  test_s4_context_projection.py  test_s5_slack.py  test_security.py  test_store.py  test_stress.py  test_sub_agent.py  test_task_manager.py  test_transport.py  test_workflow.py
